---
(4.2.4p4) Released by Harlan Stenn <stenn@ntp.org>

* [Bug 902] Fix problems with the -6 flag.
* Updated include/copyright.def (owner and year).
* [Bug 878] Avoid ntpdc use of refid value as unterminated string.
* [Bug 881] Corrected display of pll offset on 64bit systems.
* [Bug 886] Corrected sign handling on 64bit in ntpdc loopinfo command.
* [Bug 889] avoid malloc() interrupted by SIGIO risk
* ntpd/refclock_parse.c: cleanup shutdown while the file descriptor is still open.
* [Bug 885] use emalloc() to get a message at the end of the memory
            unsigned types cannot be less than 0
            default_ai_family is a short
            lose trailing , from enum list
	    clarify ntp_restrict.c for easier automated analysis
* [Bug 884] don't access recv buffers after having them passed to the free list.
* [Bug 882] allow loopback interfaces to share addresses with other interfaces.

---
(4.2.4p3) Released by Harlan Stenn <stenn@ntp.org>

* [Bug 863] unable to stop ntpd on Windows as the handle reference for events
	    changed

---
(4.2.4p2) Released by Harlan Stenn <stenn@ntp.org>

* [Bug 854] Broadcast address was not correctly set for interface addresses
* [Bug 829] reduce syslog noise, while there fix Enabled/Disable logging
	    to reflect the actual configuration.
* [Bug 795] Moved declaration of variable to top of function.
* [Bug 789] Fix multicast client crypto authentication and make sure arriving
	    multicast packets do not disturb the autokey dance.
* [Bug 785] improve handling of multicast interfaces
	    (multicast routers still need to run a multicast routing
	    software/daemon)
* [Bug 527] Don't write from source address length to wrong location
* Upgraded autogen and libopts.
* [Bug 811] ntpd should not read a .ntprc file.

---
(4.2.4p1) (skipped)

---
(4.2.4p0) Released by Harlan Stenn <stenn@ntp.org>

* [Bug 793] Update Hans Lambermont's email address in ntpsweep.
* [Bug 776] Remove unimplemented "rate" flag from ntpdate.