@@ -94,7 +94,8 @@ extern	void	freerecvbuf P((struct recvbuf *));
  *  The buffer is removed from the free list. Make sure
  *  you put it back with freerecvbuf() or 
  */
-extern	struct recvbuf *get_free_recv_buffer P((void));
+extern	struct recvbuf *get_free_recv_buffer P((void)); /* signal safe - no malloc */
+extern	struct recvbuf *get_free_recv_buffer_alloc P((void)); /* signal unsafe - may malloc */
 
 /*   Add a buffer to the full list
  */
