@@ -19,7 +19,8 @@ static u_long volatile full_recvbufs;	/* number of recvbufs on fulllist */
 static u_long volatile free_recvbufs;	/* number of recvbufs on freelist */
 static u_long volatile total_recvbufs;	/* total recvbufs currently in use */
 static u_long volatile lowater_adds;	/* number of times we have added memory */
-
+static u_long volatile buffer_shortfall;/* number of missed free receive buffers
+                                           between replenishments */
 
 static ISC_LIST(recvbuf_t)	full_recv_list;	/* Currently used recv buffers */
 static ISC_LIST(recvbuf_t)	free_recv_list;	/* Currently unused buffers */
@@ -74,19 +75,25 @@ initialise_buffer(recvbuf_t *buff)
 #endif
 }
 
-static int
+static void
 create_buffers(int nbufs)
 {
 	register recvbuf_t *bufp;
-	int i;
+	int i, abuf;
 
-	bufp = (recvbuf_t *) emalloc(nbufs*sizeof(recvbuf_t));
+	abuf = nbufs + buffer_shortfall;
+	buffer_shortfall = 0;
+
+	bufp = (recvbuf_t *) emalloc(abuf*sizeof(recvbuf_t));
 	/*
 	 * If no memory available, Bail
 	 */
 	if (bufp == NULL)
-		return (0);
-	for (i = 0; i < nbufs; i++)
+	{
+		msyslog(LOG_ERR, "no more memory for receive buffers");
+	}
+
+	for (i = 0; i < abuf; i++)
 	{
 		memset((char *) bufp, 0, sizeof(recvbuf_t));
 		ISC_LIST_APPEND(free_recv_list, bufp, link);
@@ -95,7 +102,6 @@ create_buffers(int nbufs)
 		total_recvbufs++;
 	}
 	lowater_adds++;
-	return (nbufs);
 }
 
 void
@@ -169,7 +175,23 @@ get_free_recv_buffer(void)
 		initialise_buffer(buffer);
 		(buffer->used)++;
 	}
+	else
+	{
+		buffer_shortfall++;
+	}
 	UNLOCK();
+	return (buffer);
+}
+
+recvbuf_t *
+get_free_recv_buffer_alloc(void)
+{
+	recvbuf_t * buffer = get_free_recv_buffer();
+	if (buffer != NULL)
+	{
+		create_buffers(RECV_INC);
+		buffer = get_free_recv_buffer();
+	}
 	return (buffer);
 }
 
@@ -192,10 +214,7 @@ get_full_recv_buffer(void)
 		/*
 		 * try to get us some more buffers
 		 */
-		if (create_buffers(RECV_INC) <= 0)
-		{
-			msyslog(LOG_ERR, "No more memory for recvufs");
-		}
+		create_buffers(RECV_INC);
 	}
 
 	/*
