@@ -479,7 +479,7 @@ init_io(void)
 #ifdef SYS_WINNT
 	if (!Win32InitSockets())
 	{
-		netsyslog(LOG_ERR, "No useable winsock.dll: %m");
+netsyslog(LOG_ERR, "No useable winsock.dll: %m");
 		exit(1);
 	}
 	init_transmitbuff();
@@ -2451,7 +2451,11 @@ open_socket(
 /*
  * Add the socket to the completion port
  */
-	io_completion_port_add_socket(fd, interf);
+	if (io_completion_port_add_socket(fd, interf))
+	{
+		msyslog(LOG_ERR, "unable to set up io completion port - EXITING");
+		exit(1);
+	}
 #endif
 	return fd;
 }
