@@ -1,3 +1,6 @@
+* [Bug 1000] allow implicit receive buffer allocation for Windows
+	     fixes startup for windows systems with many interfaces
+	     reduces dropped packets on network bursts
 ---
 (4.2.4p4) Released by Harlan Stenn <stenn@ntp.org>
 
